--- a/www/control.html
+++ b/www/control.html
@@ -2,6 +2,7 @@
 <head></head>
 <body>
 <script src="cordova.js"></script>
+<script src="js/jquery.js"></script>
 <script src="js/control.js"></script>
 </body>
 </html>
